syntax = 'proto3';

package calculator;

option go_package = './calculatorpb';

message SumRequest {
  int32 left = 1;
  int32 right = 2;
}

message SumResponse {
  int32 result = 1;
}

message PrimeFactorizationRequest {
  int64 number = 1;
}

message PrimeFactorizationResponse {
  int64 factor = 1;
}

message ComputeAverageRequest {
  int32 number = 1;
}

message ComputeAverageResponse {
  double average = 1;
}

message FindMaximumRequest {
  int32 number = 1;
}

message FindMaximumResponse {
  int32 maximum = 1;
}

message SquareRootRequest {
  double number = 1;
}

message SquareRootResponse {
  double root = 1;
}

service CalculatorService {
  rpc Sum(SumRequest) returns (SumResponse) {};

  rpc PrimeFactorization(PrimeFactorizationRequest)
      returns (stream PrimeFactorizationResponse) {};

  rpc ComputeAverage(stream ComputeAverageRequest)
      returns (ComputeAverageResponse) {};

  rpc FindMaximum(stream FindMaximumRequest)
      returns (stream FindMaximumResponse) {};

  // returns INVALID_ARGUMENT error for negative numbers
  rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {};
}
